# ollamate

./: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/chat/: commands.rs  models.rs
src/components/: ChatInterface.tsx  ChatMessageBubble.tsx  CustomTitleBar.tsx  MarkdownRenderer.tsx  ModelSelectDropdown.tsx  SettingsDialog.tsx  Sidebar.tsx
src/contexts/: chat.tsx  settings.tsx
src/layouts/: main-layout.tsx
src/models/: chat.ts  settings.ts
src/pages/: _app.tsx  index.tsx
src/pages/chat/[id]/: index.tsx
src/pages/settings/: index.tsx
src/services/: chat.ts
src/styles/: globals.css  settings.css
src/utils/: image.ts
