[package]
name = "OllaMate"
version = "0.1.1"
description = "Yet another Ollama client"
authors = ["Reqwey"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2.3.0", features = ["http2", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
base64 = "0.22.1"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
